# FidelityFX-CACAO

./: .gitignore  .gitlab-ci.yml  .gitmodules  NOTICES.txt  doxygen.conf  license.txt  readme.md
ffx-cacao/: readme.md
ffx-cacao/inc/: ffx_cacao.h
ffx-cacao/src/: build_shaders.bat  build_shaders_dxil.bat  build_shaders_spirv.bat  ffx_cacao.cpp  ffx_cacao.hlsl  ffx_cacao_defines.h
ffx-cacao/src/PrecompiledShaders/: CACAOApply.h  CACAOEdgeSensitiveBlur1.h  CACAOEdgeSensitiveBlur2.h  CACAOEdgeSensitiveBlur3.h  CACAOEdgeSensitiveBlur4.h  CACAOEdgeSensitiveBlur5.h  CACAOEdgeSensitiveBlur6.h  CACAOEdgeSensitiveBlur7.h  CACAOEdgeSensitiveBlur8.h  CACAOGenerateImportanceMap.h  CACAOGenerateQ0.h  CACAOGenerateQ1.h  CACAOGenerateQ2.h  CACAOGenerateQ3.h  CACAOGenerateQ3Base.h  CACAONonSmartApply.h  CACAONonSmartHalfApply.h  CACAOPostprocessImportanceMapA.h  CACAOPostprocessImportanceMapB.h  CACAOPrepareDownsampledDepths.h  CACAOPrepareDownsampledDepthsAndMips.h  CACAOPrepareDownsampledDepthsHalf.h  CACAOPrepareDownsampledNormals.h  CACAOPrepareDownsampledNormalsFromInputNormals.h  CACAOPrepareNativeDepths.h  CACAOPrepareNativeDepthsAndMips.h  CACAOPrepareNativeDepthsHalf.h  CACAOPrepareNativeNormals.h  CACAOPrepareNativeNormalsFromInputNormals.h  CACAOUpscaleBilateral5x5.h  CACAOUpscaleBilateral5x5Half.h
sample/: CMakeLists.txt  readme.md
sample/src/Common/: Common.h  FFX_CACAO_Common.h  FFX_CACAO_Sample.json
sample/src/DX12/: Apply_CACAO.hlsl  CMakeLists.txt  FFX_CACAO_Sample.cpp  FFX_CACAO_Sample.h  Sample.cpp  Sample.h  SampleRenderer.cpp  SampleRenderer.h  stdafx.h
sample/src/VK/: Apply_CACAO_Direct.glsl  CMakeLists.txt  FFX_CACAO_Sample.cpp  FFX_CACAO_Sample.h  Sample.cpp  Sample.h  SampleRenderer.cpp  SampleRenderer.h  stdafx.h
